--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,7 @@ server.port=9090
 spring.datasource.url=jdbc:mysql://101.43.231.2:3306/devops
 spring.datasource.username=root
 spring.datasource.password=qwertyuiop
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 mybatis.configuration.mapUnderscoreToCamelCase=true
