--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,10 +25,8 @@ mybatis.mapper-locations=classpath:mappers/*xml
 #\u6307\u5B9AMybatis\u7684\u5B9E\u4F53\u76EE\u5F55
 mybatis.type-aliases-package=com.coop.devopsservice.mybatis.entity
 
-server.port=9090
-
 # application.properties
-spring.datasource.url=jdbc:mysql://101.43.231.2:3306/devops
+spring.datasource.url=jdbc:mysql://101.43.231.2:3306/devops?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=qwertyuiop
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -36,6 +34,10 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 mybatis.configuration.mapUnderscoreToCamelCase=true
 logging.level.com.exam.mapper=debug
+
+#\u89E3\u51B3\u7A7A\u6307\u9488\u62A5\u9519\u7684\u95EE\u9898 \u7531\u4E8ESwagger\u7248\u672C\u592A\u9AD8
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.profiles.active=dev
 
 
 
