新增状态模式、享元模式、外观模式、建造者模式和工厂模式；修改问题类和史诗类

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.coop</groupId>
-    <artifactId>devopsservice</artifactId>
+    <artifactId>DevOps-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>devopsservice</name>
     <description>devopsservice</description>
