--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ mybatis.mapper-locations=classpath:mappers/*xml
 mybatis.type-aliases-package=com.coop.devopsservice.mybatis.entity
 
 # application.properties
-spring.datasource.url=jdbc:mysql://101.43.231.2:3306/devops?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://101.43.231.2:3306/dev_ops_1?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=qwertyuiop
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
