修改文件最大上传限制设置为10MB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,3 +38,8 @@ logging.level.com.exam.mapper=debug
 # \u89E3\u51B3\u7A7A\u6307\u9488\u62A5\u9519\u7684\u95EE\u9898 \u7531\u4E8ESwagger\u7248\u672C\u592A\u9AD8
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 spring.profiles.active=dev
+
+# \u5C06\u6700\u5927\u4E0A\u4F20\u9650\u5236\u8BBE\u7F6E\u4E3A10MB
+spring.servlet.multipart.max-file-size=10485760
+spring.servlet.multipart.max-request-size=10485760
+
